--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
 	"dependencies": {
 		"bootstrap": "^5.3.0",
 		"bootstrap-icons": "^1.10.5",
-		"dotenv": "^16.1.4"
+		"dotenv": "^16.1.4",
+		"humanize-plus": "^1.8.2",
+		"jsonwebtoken": "^9.0.0"
 	}
 }
