--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
 		"bootstrap-icons": "^1.10.5",
 		"dotenv": "^16.1.4",
 		"humanize-plus": "^1.8.2",
-		"jsonwebtoken": "^9.0.0"
+		"jsonwebtoken": "^9.0.0",
+		"markdown": "^0.5.0",
+		"svelte-markdown": "^0.2.3"
 	}
 }
