--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"axios": "^1.4.0",
 		"bootstrap": "^5.3.0",
 		"bootstrap-icons": "^1.10.5",
 		"dotenv": "^16.1.4",
+		"humanize": "^0.0.9",
 		"humanize-plus": "^1.8.2",
 		"jsonwebtoken": "^9.0.0",
 		"markdown": "^0.5.0",
