--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@splidejs/svelte-splide": "^0.2.9",
 		"axios": "^1.4.0",
 		"bootstrap": "^5.3.0",
 		"bootstrap-icons": "^1.10.5",
