--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.8.1",
 		"svelte": "^3.54.0",
+		"svelte-paginate": "^0.1.0",
 		"vite": "^4.3.0"
 	},
 	"type": "module",
@@ -31,6 +32,7 @@
 		"humanize-plus": "^1.8.2",
 		"jsonwebtoken": "^9.0.0",
 		"markdown": "^0.5.0",
+		"node-fetch": "^3.3.1",
 		"svelte-markdown": "^0.2.3"
 	}
 }
