--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@sentry/svelte": "^7.57.0",
 		"@splidejs/svelte-splide": "^0.2.9",
 		"axios": "^1.4.0",
 		"bootstrap": "^5.3.0",
